// Code generated by skv2. DO NOT EDIT.

syntax = "proto3";
package fed.rpc.solo.io;

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;

option go_package = "github.com/solo-io/solo-projects/projects/apiserver/pkg/api/fed.rpc/v1";
import "github.com/solo-io/solo-projects/projects/gloo-fed/api/fed.gateway/v1/gateway.proto";
import "github.com/solo-io/solo-projects/projects/gloo-fed/api/fed.gateway/v1/matchable_http_gateway.proto";
import "github.com/solo-io/solo-projects/projects/gloo-fed/api/fed.gateway/v1/virtual_service.proto";
import "github.com/solo-io/solo-projects/projects/gloo-fed/api/fed.gateway/v1/route_table.proto";
import "github.com/solo-io/skv2/api/core/v1/core.proto";
import "github.com/solo-io/solo-projects/projects/apiserver/api/rpc.edge.gloo/v1/common.proto";

message FederatedGateway {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .fed.gateway.solo.io.FederatedGatewaySpec spec = 2;
    .fed.gateway.solo.io.FederatedGatewayStatus status = 3;
}

message FederatedMatchableHttpGateway {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .fed.gateway.solo.io.FederatedMatchableHttpGatewaySpec spec = 2;
    .fed.gateway.solo.io.FederatedMatchableHttpGatewayStatus status = 3;
}

message FederatedVirtualService {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .fed.gateway.solo.io.FederatedVirtualServiceSpec spec = 2;
    .fed.gateway.solo.io.FederatedVirtualServiceStatus status = 3;
}

message FederatedRouteTable {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .fed.gateway.solo.io.FederatedRouteTableSpec spec = 2;
    .fed.gateway.solo.io.FederatedRouteTableStatus status = 3;
}

message ListFederatedGatewaysRequest {}

message ListFederatedGatewaysResponse {
    repeated FederatedGateway federated_gateways = 1;
}

message GetFederatedGatewayYamlRequest {
    .core.skv2.solo.io.ObjectRef federated_gateway_ref = 1;
}

message GetFederatedGatewayYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message ListFederatedMatchableHttpGatewaysRequest {}

message ListFederatedMatchableHttpGatewaysResponse {
    repeated FederatedMatchableHttpGateway federated_matchable_http_gateways = 1;
}

message GetFederatedMatchableHttpGatewayYamlRequest {
    .core.skv2.solo.io.ObjectRef federated_matchable_http_gateway_ref = 1;
}

message GetFederatedMatchableHttpGatewayYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message ListFederatedVirtualServicesRequest {}

message ListFederatedVirtualServicesResponse {
    repeated FederatedVirtualService federated_virtual_services = 1;
}

message GetFederatedVirtualServiceYamlRequest {
    .core.skv2.solo.io.ObjectRef federated_virtual_service_ref = 1;
}

message GetFederatedVirtualServiceYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message ListFederatedRouteTablesRequest {}

message ListFederatedRouteTablesResponse {
    repeated FederatedRouteTable federated_route_tables = 1;
}

message GetFederatedRouteTableYamlRequest {
    .core.skv2.solo.io.ObjectRef federated_route_table_ref = 1;
}

message GetFederatedRouteTableYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

service FederatedGatewayResourceApi {

    rpc ListFederatedGateways (ListFederatedGatewaysRequest) returns (ListFederatedGatewaysResponse) {}
    rpc GetFederatedGatewayYaml (GetFederatedGatewayYamlRequest) returns (GetFederatedGatewayYamlResponse) {}

    rpc ListFederatedMatchableHttpGateways (ListFederatedMatchableHttpGatewaysRequest) returns (ListFederatedMatchableHttpGatewaysResponse) {}
    rpc GetFederatedMatchableHttpGatewayYaml (GetFederatedMatchableHttpGatewayYamlRequest) returns (GetFederatedMatchableHttpGatewayYamlResponse) {}

    rpc ListFederatedVirtualServices (ListFederatedVirtualServicesRequest) returns (ListFederatedVirtualServicesResponse) {}
    rpc GetFederatedVirtualServiceYaml (GetFederatedVirtualServiceYamlRequest) returns (GetFederatedVirtualServiceYamlResponse) {}

    rpc ListFederatedRouteTables (ListFederatedRouteTablesRequest) returns (ListFederatedRouteTablesResponse) {}
    rpc GetFederatedRouteTableYaml (GetFederatedRouteTableYamlRequest) returns (GetFederatedRouteTableYamlResponse) {}
}